# Nas-Manager

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-apk.ps1  build-exe.ps1
android/: .gitignore  README.md  build-apk.ps1  index.html  package.json  pnpm-lock.yaml
android/scripts/: gen-icons-from-logo.py  sync-android-icon.py
android/src/: App.vue  api.ts  app-shell.css  comicStreamStore.ts  main.ts  readerProgressBridge.ts  readerProgressMath.ts  readerShared.css  remoteBrowseLayout.ts  remoteBrowseMedia.ts  remotePcFavoritesStorage.ts  streamPlaylistStorage.ts  videoStreamProgress.ts
android/src-tauri/: Cargo.toml  tauri.conf.json
android/src-tauri/icons/: icon.icns
android/src-tauri/icons/icons/: icon.icns
android/src-tauri/src/: android_commands.rs  clipboard_plugin.rs  commands.rs  config.rs  events.rs  extensions.rs  folder_picker.rs  lan_discovery.rs  lib.rs  local_reader.rs  local_video_player.rs  logger.rs  main.rs  mobile_settings.rs  pc_remote_discovery.rs  remote_comic.rs  remote_pc_file_op.rs  remote_pc_transfer.rs  remote_pc_upload.rs  utils.rs
android/src-tauri/src/types/: comic_info.rs  download_format.rs  img_list.rs  mod.rs  ranking_period.rs  search_result.rs
android/src/components/: ApiDomainListDialog.vue  MobileComicReadShell.vue  MobileComicStreamPanel.vue  MobileComicStreamRead.vue  MobileLocalRead.vue  MobileReaderProgressBar.vue  MobileRemoteBrowse.vue  MobileRemoteManage.vue  MobileVideoPlay.vue  ReaderAspectRatioMenu.vue  StreamPlaylistList.vue
android/src/composables/: useReaderAspectRatio.ts  useReaderChromeAutoHide.ts  useReaderFullscreen.ts
android/src/styles/: global.css
docs/: BUILD.md
releases/: RELEASE-v1.0.0-notes.md
windows/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
windows/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
windows/.github/workflows/: build-android-apk.yml  close-default-title-issue.yml
windows/scripts/: fetch-ffmpeg.ps1
windows/src/: App.tsx  App.vue  AppRemote.tsx  api.ts  bindings.ts  categories.ts  chineseText.ts  comicBrowseLayout.ts  comicReadUi.ts  comicSearchName.ts  comicStreamPlaylistStorage.ts  comicStreamProgress.ts  copyText.ts  favoritesStorage.ts  global.css  invokeError.ts  koreanWebtoon.ts  localReadStore.ts  localReaderViewport.ts  main.ts  readerDisplayName.ts  readerProgressBridge.ts  readerProgressMath.ts  readerScrollAnchor.ts  remoteBrowseLayout.ts  searchResultTabsStorage.ts  searchTabBookmarksStorage.ts  searchUtils.ts  store.ts  types.ts  utils.ts  videoStreamProgress.ts  videoStreamStore.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json  tauri.fast.conf.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: commands.rs  config.rs  desktop_commands.rs  events.rs  exe_icon.rs  extensions.rs  lib.rs  local_reader.rs  logger.rs  main.rs  mobile_settings.rs  pc_remote_discovery.rs  remote_management.rs  remote_pc_transfer.rs  remote_pc_upload.rs  share_roots.rs  utils.rs  video_player_discovery.rs  video_stream_prep.rs  volume_binding.rs
windows/src-tauri/src/types/: comic.rs  get_shelf_result.rs  search_result.rs  tag.rs  user_profile.rs
windows/src/components/: MobileComicStreamPanel.vue  MobileComicStreamRead.vue  MobileLocalRead.vue  MobileReaderProgressBar.vue  MobileRemoteBrowse.vue  MobileRemoteManage.vue  MobileVideoPlay.vue  RemoteBrowseEntryThumb.vue  ServerSettings.vue  StreamPlaylistList.vue
windows/src/utils/: batchEnqueueRunner.ts  comicQueueStub.ts  downloadBatchEnqueue.ts  enqueueErrorSummary.ts
