[package]
name = "gentleman-manager-android"
version = "0.1.0"
description = "Gentleman Manager Android"
authors = ["Nas Manager Contributors"]
edition = "2021"

[lib]
name = "gentleman_manager_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc", features = ["serde_json"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.9" }

reqwest = { version = "0.12.12", features = ["rustls-tls", "stream", "json"], default-features = false }
futures-util = "0.3"
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.0" }

anyhow = { version = "1.0.96" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = { version = "0.2.3" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
scraper = { version = "0.23.1" }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
bytes = { version = "1.10.1" }
uuid = { version = "1.15.1", features = ["v4"] }
zip = { version = "2.2.3", default-features = false, features = ["deflate", "deflate64"] }
rayon = { version = "1.11.0" }
regex = { version = "1.11.1" }
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }
notify = { version = "8.0.0" }
base64 = "0.22"
mdns-sd = "0.13"
if-addrs = "0.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
