[package]
name = "Nas-Manager-Windows"
version = "1.0.0"
description = "A Tauri App"
authors = ["Nas Manager Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nas_manager_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }

specta = { version = "2.0.0-rc", features = ["serde_json"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.9" }

reqwest = { version = "0.12.12", features = ["rustls-tls", "stream", "json"], default-features = false }
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.0" }

anyhow = { version = "1.0.96" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = { version = "0.2.3" }
notify = { version = "8.0.0" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
scraper = { version = "0.23.1" }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
bytes = { version = "1.10.1" }
uuid = { version = "1.15.1", features = ["v4"] }
zip = { version = "2.2.3", default-features = false, features = ["deflate", "deflate64"] }
rayon = { version = "1.11.0" }
strfmt = { version = "0.2.5" }
axum = "0.8"
futures-util = "0.3"
base64 = "0.22"
mdns-sd = "0.13"
get_if_addrs = "0.5"
socket2 = "0.5"
natord = "1.0.9"
dunce = "1.0.5"
tokio-util = { version = "0.7", features = ["io"] }
trash = "5"
arboard = "3.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"


[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# 本機快速驗證用：pnpm tauri:build:fast（thin LTO 略增建置時間，可明顯縮小 EXE）
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
opt-level = "z"
